# dts

./: CMakeLists.txt  LICENSE  Makefile  README.md  appveyor.yml  dts.h  dtstructs.h
.github/ISSUE_TEMPLATE/: bug_report.md
examples/: Makefile
examples/array/: array.c
examples/dynarray/: dynarray.c
examples/list/: list.c
src/: array.c  dynamic_array.c  list.c  main.c  stack.c  tree.c
src/include/: dtstructs.h
tests/: test_alignof1.c  test_alignof2.c  test_array1.c  test_array2.c  test_buk_sizeof.c  test_buk_value_offset.c  test_bukarray1.c  test_dynarray1.c  test_listnode_sizeof.c  test_struct_sizeof.c
